--- a/index.html
+++ b/index.html
@@ -90,6 +90,6 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>	
-<script type="text/javascript" src="assets/javascript/train.js"></script>	
+<script type="text/javascript" src="assets/javascript/app.js"></script>	
 </body>
 </html>
